# pdf-summary

./: .gitignore  README.md  backend.py  config.py  data_classes.py  index.html  init.py  launch_instructions.md  processor.py  prompt.md  pyproject.toml  run_all.sh  sprint1.md  sprints.md  test_gemini.py
app/: backend.py  config.py  processor.py
deploy/: init.py  launch_instructions.md
templates/: index.html
